Update rock paper scissor.html

--- a/rock paper scissor.html
+++ b/rock paper scissor.html
@@ -158,14 +158,14 @@
     </div>
     <div class="choices">
         <div class="choice " id="rock" onclick="sendRock()">
-            <img src="fist.png" alt="">
+            <img src="images/fist.png" alt="">
 
         </div>
         <div class="choice" id="paper" onclick="sendPaper()">
-            <img src="hello.png" alt="">
+            <img src="images/hello.png" alt="">
         </div>
         <div class="choice" id="scissors" onclick="sendScissor()">
-            <img src="letter-v.png" alt="">
+            <img src="images/letter-v.png" alt="">
         </div>
     </div>
 
